# my_image_proc

./: CMakeLists.txt  README.md  package.xml
src/: image_resize.cpp
